# mxl-decklink

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SPECIFICATION.md
.github/workflows/: ci.yaml  container.yaml
deploy/: generic-device-plugin.yaml  mxl-decklink.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
src/: main.cpp  version.hpp
src/channel/: channel_manager.cpp  channel_manager.hpp  input_channel.cpp  input_channel.hpp  output_channel.cpp  output_channel.hpp  state.hpp
src/config/: config.cpp  config.hpp  videomodes.cpp  videomodes.hpp
src/decklink/: device.hpp  devicemanager.cpp  devicemanager.hpp  types.hpp
src/decklink/mock/: mockbackend.cpp
src/decklink/sdk/: sdkbackend.cpp
src/mxlbridge/: ancwriter.cpp  ancwriter.hpp  audioreader.cpp  audioreader.hpp  audiowriter.cpp  audiowriter.hpp  domain.cpp  domain.hpp  flowdef.cpp  flowdef.hpp  videoreader.cpp  videoreader.hpp  videowriter.cpp  videowriter.hpp
src/ops/: health.cpp  health.hpp  housekeeping.cpp  housekeeping.hpp  httpserver.cpp  httpserver.hpp  metrics.cpp  metrics.hpp
src/util/: anc.cpp  anc.hpp  audioconv.cpp  audioconv.hpp  logging.cpp  logging.hpp  taiclock.cpp  taiclock.hpp  threading.cpp  threading.hpp  uuid.cpp  uuid.hpp  v210.cpp  v210.hpp
tests/integration/: smoke.sh
tests/unit/: test_anc.cpp  test_audioconv.cpp  test_config.cpp  test_flowdef.cpp  test_main.cpp  test_metrics.cpp  test_taiclock.cpp  test_uuid.cpp  test_v210.cpp  test_videomodes.cpp
